--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-body { font-family: Arial, sans-serif; margin: 0; color: #00FFFF;}
+body { font-family: Arial, sans-serif; margin: 0; background-color: #00FFFF;}
 nav { background: #111; padding: 12px; }
 nav a { color: #fff; text-decoration: none; margin-right: 12px; }
 main { padding: 20px; }
